--- a/package.json
+++ b/package.json
@@ -16,16 +16,20 @@
     "@mui/styled-engine-sc": "^6.4.3",
     "@mui/x-charts": "^7.26.0",
     "@tabler/icons-react": "^3.30.0",
+    "@tailwindcss/vite": "^4.0.6",
+    "axios": "^1.7.9",
     "clsx": "^2.1.1",
     "framer-motion": "^11.15.0",
     "motion": "^12.4.3",
     "react": "^18.3.1",
+    "react-animated-cursor": "^2.11.2",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
-    "styled-components": "^6.1.15"
+    "styled-components": "^6.1.15",
+    "tailwind-merge": "^3.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
@@ -40,7 +44,7 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.15",
+    "tailwindcss": "^3.4.17",
     "vite": "^5.4.9"
   }
 }
